--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-fastapi==0.1.6
-uvicorn==0.15.0
-geopandas==0.10.1
+uvicorn==0.25.0
+geopandas==0.14.2
 shapely==2.0.2
 fiona==1.9.5
 fastapi-limiter==0.1.6
-geopy==2.2.0
+geopy==2.4.1
+uvicorn = 0.25.0
+fastapi-limiter==0.1.6
+fastapi-ratelimit==0.0.5
+fastapi~=0.108.0
+starlette~=0.32.0.post1
