--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ shapely==2.0.2
 fiona==1.9.5
 fastapi-limiter==0.1.6
 geopy==2.4.1
-uvicorn = 0.25.0
+uvicorn==0.25.0
 fastapi-limiter==0.1.6
 fastapi-ratelimit==0.0.5
 fastapi~=0.108.0
